resources/tests/files/ok/GenericArrayReturn.krna


interface S<T> {
    fn f<T>(self) -> [T]
}