resources/tests/files/fail/FunctionTypesWrongReturn2.krna


fn f() {

    let t: fn(string) -> string = fn(ref) Boolean.valueOf(ref)

}


